2005-03-28  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs: Read summarized data.

	* TypeGraphPlotter.cs: Rather than rely on reading the profile in
	one gulp, use the summarized data.

2005-02-19  Ben Maurer  <bmaurer@ximian.com>

	* TypeGraphPlotter.cs:
	    - A new color chooser. Somewhat exparimental. I still think it
	      needs to get better
	    - Make anti-alias work nicely, by drawing rectangles from the
	      bottom of the band to the top of the screen. This prevents
	      little white lines. 

2005-02-06  Ben Maurer  <bmaurer@ximian.com>

	* Profile.cs (MaxSize): new prop.
	(ContextDataTabulator): API change of ProfileReader
	(ContextDataTabulator.Checkpoint): missing a return here.

	* ProfileReader.cs: Don't do start file pos, but start file time.

	* TypeTabulator.cs: Add stuff to do a tabulation that starts
	midfile. Remove max size type stuff.

	* TypeGraphPlotter.cs: Get the max size from the profile

2005-01-20  Ben Maurer  <bmaurer@ximian.com>

	* Profile.cs, ProfileReader.cs: add stuff to get timeline

2005-01-17  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs (GetTimelineBefore): Make this actually get the
	one before ;-).

	(Read): Make the end time thing really work.

2005-01-16  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs (ReadCheckpoint, Checkpoint, GetTimelineBefore,
	GetTimeline): new functions.

	* Profile.cs (GetContextObjsForTime): new func.

	* TypeTabulator.cs: Don't load the context data. Saves shitloads
	of ram.

	* ProfileReader.cs: Update file format

	* TypeTabulator.cs: cope with changes

	* *.cs: Factor Profile out.
	
	* Profile.cs: New file.

2005-01-15  Ben Maurer  <bmaurer@ximian.com>

	* ProfileReader.cs: Update for new file format. Read HeapSize
	stuff.

	* TypeTabulator.cs: Add HeapSize type stuff.

	* TypeGraphPlotter.cs: Plot the total heap size.

2005-01-09  Ben Maurer  <bmaurer@ximian.com>

	* *: Initial Import.
