@@ -1,3 +1,10 @@
+2005-04-01  Ben Maurer  <bmaurer@ximian.com>
+
+	* TypeGraphPlotter.cs: Use a unified threshold level. Partially
+	fixes an issue with the graph not being the right size.
+
+	* TypeTabulator.cs: Ditto.
+
 2005-03-28  Ben Maurer  <bmaurer@ximian.com>
 
 	* ProfileReader.cs: Read summarized data.
